Added few categories

--- a/homepage.html
+++ b/homepage.html
@@ -4,55 +4,153 @@
     <meta charset="utf-8">
     <title>Rex Books</title>
 
-
+      <link rel="stylesheet" href="css/styles.css">
         <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <!-- JS, Popper.js, and jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Font Awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <center>
-      <div class="container">
-      <div class="clip-text">
-        RexBooks
-      </div>
-      </div>
-      <h3 style="color:white">For the Book-Worms out there</h3>
-      <hr size="4" width=80%>
-      <br>
-    </center>
-      <div class="hover">
+    <br><br>
 
-        <div class="row">
-          <div class="col-lg-2">
-            <a href="bookPages/thealchemist.html"><img src="images/alchemist.jpg" alt="" width="200" height="270" style="padding: 10px;"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#" style="font-size: 2.7rem;">RexBooks</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Classics</a>
+              <a class="dropdown-item" href="#">Sci-Fi</a>
+              <a class="dropdown-item" href="#">Biography</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+
+        <div class="section-odd">
+          <h1>Best Sellers</h1>
+            <div class="row">
+              <div class="col-lg-2">
+                <a href="/Users/hirakdesai/Documents/WorkSpace/GitHub/rexBooks/bookpages/thealchemist.html"><img src="images/alchemist.jpg" alt="" width="200" height="270" style="padding: 10px;"></a>
+              </div>
+              <div class="col-lg-2">
+                <img src="images/inTheSearchOfLostTime.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/trespassing.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/harrypotter.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
           </div>
-          <div class="col-lg-2">
-            <img src="images/inTheSearchOfLostTime.jpg" alt="" width="200" height="270" style="padding: 10px;">
         </div>
-        <div class="col-lg-2">
-          <img src="images/trespassing.jpg" alt="" width="200" height="270" style="padding: 10px;">
-        </div>
-        <div class="col-lg-2">
-          <img src="images/harrypotter.jpg" alt="" width="200" height="270" style="padding: 10px;">
-        </div>
-        <div class="col-lg-2">
-          <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
-        </div>
-      </div>
-</div>
 
-    <!-- JAVA SCRIPT -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+        <div class="section-even">
+          <h1>Classics</h1>
+            <div class="row">
+              <div class="col-lg-2">
+                <a href="bookPages/thealchemist.html"><img src="bookCovers/classics/greatExpectations.jpg" alt="" width="200" height="270" style="padding: 10px;"></a>
+              </div>
+              <div class="col-lg-2">
+                <img src="bookCovers/classics/littleWomen.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="bookCovers/classics/prideAndPrejudice.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="bookCovers/classics/theGreatgatsby.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="bookCovers/classics/toKillAMockingBird.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="bookCovers/classics/theSecretGarden.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+          </div>
+        </div>
+
+        <div class="section-odd">
+          <h1>Magazines</h1>
+            <div class="row">
+              <div class="col-lg-2">
+                <a href="/Users/hirakdesai/Documents/WorkSpace/GitHub/rexBooks/bookpages/thealchemist.html"><img src="images/alchemist.jpg" alt="" width="200" height="270" style="padding: 10px;"></a>
+              </div>
+              <div class="col-lg-2">
+                <img src="images/inTheSearchOfLostTime.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/trespassing.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/harrypotter.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+          </div>
+        </div>
+
+        <div class="section-even">
+          <h1>Comics</h1>
+            <div class="row">
+              <div class="col-lg-2">
+                <a href="bookPages/thealchemist.html"><img src="images/alchemist.jpg" alt="" width="200" height="270" style="padding: 10px;"></a>
+              </div>
+              <div class="col-lg-2">
+                <img src="images/inTheSearchOfLostTime.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/trespassing.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/harrypotter.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+            <div class="col-lg-2">
+              <img src="images/marvel.jpg" alt="" width="200" height="270" style="padding: 10px;">
+            </div>
+          </div>
+        </div>
+
+
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
