--- a/bookPages/thealchemist.html
+++ b/bookPages/thealchemist.html
@@ -2,30 +2,32 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-  </head>
-  <style>
-body {
-  background-image: url(images/wall2.png);
-}
-</style>
-  <body>
-    <table>
-      <tr>
-        <td><img src="images/alchemist.jpg" alt="" width="200" height="270" style="padding: 10px;"></td>
-        <td>
-          <table>
-            <tr><h3 style="color:white">DOWNLOAD PFD</h3></tr> <br>
-            <tr><h3 style="color:white">DOWNLOAD KINDLE</h3></tr> <br>
-            <tr><h3 style="color:white">DOWNLOAD EPUB</h3></tr> <br>
-            <tr><h3 style="color:white">READ ONLINE</h3></tr> <br>
-        </table>
-        </td>
-      </tr>
-    </table>
+    <title>The Alchemist</title>
 
-    <p>An iframe with no borders:</p>
-<iframe src="pdfs/ta.pdf" width="100%" height="1000" style="border:none;">
-</iframe>
+    <link rel="stylesheet" href="css/substyles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+  </head>
+
+  <body>
+
+    <div class="row">
+      <div class="col-lg-4">
+        <td><img src="/Users/hirakdesai/Documents/WorkSpace/GitHub/rexBooks/images/alchemist.jpg" alt="" width="500" height="670" style="padding: 10px;"></td>
+      </div>
+      <div class="col-lg-4">
+        <h1>The Alchemist</h1>
+        <br>
+        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</h3>
+        <br>
+        <button type="button" name="button">Download</button>
+      </div>
+    </div>
+
+
+
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
