--- a/bookPages/thegreatgatsby.html
+++ b/bookPages/thegreatgatsby.html
@@ -16,11 +16,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Sriracha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
      <link rel="stylesheet" href="http://localhost:8080/rexBooks/css/styles.css">
-
      <link rel="stylesheet" href="http://localhost:8080/rexBooks/css/substyles.css">
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <style type="text/css">
       body {
@@ -83,7 +82,6 @@
   right: 0;
 }
 
-
 .basefooter {
   width: 100%;
   height: 50px;
@@ -141,7 +139,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
-           <div class="dropdown-menu" aria-labelledby="dropdown01">
+             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="http://localhost:8080/rexBooks/bookPages/cat/classics.html">Classics</a>
               <a class="dropdown-item" href="#">Sci-Fi</a>
               <a class="dropdown-item" href="http://localhost:8080/rexBooks/bookPages/cat/magazines.html">Magazines</a>  
@@ -162,7 +160,6 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-
         </form>
       </div>
     </nav>
@@ -171,7 +168,7 @@
         <script type="text/javascript">
           var count = 10;
           function like() {
-            count = 22;
+            count = 11;
             // alert(count);
             document.getElementById('btspan').style.display="block";
             document.getElementById('btspan').innerHTML=count;
@@ -185,17 +182,17 @@
 
     <div class="row">
       <div class="col-lg-4 col-md-6">
-        <img src="https://images-na.ssl-images-amazon.com/images/I/81s5gr8znaL.jpg" alt="" width="70%" height="80%" style="margin: 5%; padding: 2%;" data-aos="flip-left">
+        <img src="http://localhost:8080/rexBooks/bookCovers/classics/theGreatgatsby.jpg" alt="" width="70%" height="80%" style="margin: 5%; padding: 2%;" data-aos="flip-left">
       </div>
       <div class="col-lg-4 col-md-6" data-aos="flip-right">
         <br>
-        <h1 class="shadow-lg">The Alchemist</h1>
-        <h2 class="shadow-lg">-Paulo Coelho</h2> <br>
-        <h3 class="shadow-lg">The Alchemist follows the journey of an Andalusian shepherd boy named Santiago. Believing a recurring dream to be prophetic, he asks a Gypsy fortune teller in the nearby town about its meaning. The woman interprets the dream as a prophecy telling the boy that he will discover a treasure at the Egyptian pyramids.</h3>
-        <br> <h5 class="shadow-lg">Novel, Drama, Quest, Fantasy Fiction, Adventure fiction</h5>
-        <h5 class="shadow-lg">1998</h5>
-        <div id="bt" style="text-align: center;"><a  href="http://localhost:8080/rexBooks/pdfs/theAlchemist.pdf" download><button class="button"><span>Download</span></button></a><br><br>
-          <button onclick="like()"><i class="fas fa-2x fa-heart"></i></button><span id="btspan" style="color: white; display: none;">count</span><br><span id="bttemp" style="color: white; display: inline;">21</span>
+        <h1 class="shadow-lg">The Great Gatsby</h1>
+        <h2 class="shadow-lg">-F.Scott Fitzgerald</h2> <br>
+        <h3 class="shadow-lg">The Great Gatsby is a 1925 novel written by American author F. Scott Fitzgerald that follows a cast of characters living in the fictional towns of West Egg and East Egg on prosperous Long Island in the summer of 1922. Many literary critics consider The Great Gatsby to be one of the greatest novels ever written.</h3>
+        <br> <h5 class="shadow-lg">Novel, Fiction, Tragedy</h5>
+        <h5 class="shadow-lg">1974</h5>
+        <div id="bt" style="text-align: center;"><a  href="http://localhost:8080/rexBooks/pdfs/theGreatGatsby.pdf" download><button class="button"><span>Download</span></button></a><br><br>
+          <button onclick="like()"><i class="fas fa-2x fa-heart"></i></button><span id="btspan" style="color: white; display: none;">count</span><br><span id="bttemp" style="color: white; display: inline;">10</span>
 
 <!-- AddToAny BEGIN -->
 <div style="padding-left: 29%" class="a2a_kit a2a_kit_size_32 a2a_default_style">
@@ -227,26 +224,25 @@ a2a_config.num_services = 4;
           <h1>Recommended</h1>
             <div class="row">
               <div class="col-lg-2 col-md-4">
-                <a href="" ><img src="http://localhost:8080/rexBooks/bookCovers/horror/hor9.jpg" alt="" width="100%" height="85%" style="padding: 1%;"></a>
+                <a href="" ><img src="http://localhost:8080/rexBooks/bookCovers/horror/hor5.jpg" alt="" width="100%" height="85%" style="padding: 1%;"></a>
               </div>
               <div class="col-lg-2 col-md-4">
-                <img src="http://localhost:8080/rexBooks/bookCovers/biographies/bio9.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
+                <img src="http://localhost:8080/rexBooks/bookCovers/biographies/bio10.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
             </div>
             <div class="col-lg-2 col-md-4">
-              <img src="http://localhost:8080/rexBooks/bookCovers/classics/cla9.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
+              <img src="http://localhost:8080/rexBooks/bookCovers/classics/cla15.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
             </div>
             <div class="col-lg-2 col-md-4">
-              <img src="http://localhost:8080/rexBooks/bookCovers/magazines/mag4.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
+              <img src="http://localhost:8080/rexBooks/bookCovers/magazines/mag8.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
             </div>
             <div class="col-lg-2 col-md-4">
-              <img src="http://localhost:8080/rexBooks/bookCovers/classics/cla3.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
+              <img src="http://localhost:8080/rexBooks/bookCovers/classics/cla6.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
             </div>
             <div class="col-lg-2 col-md-4">
               <img src="http://localhost:8080/rexBooks/bookCovers/biographies/bio3.jpg" alt="" width="100%" height="85%" style="padding: 1%;">
             </div>
           </div>
         </div>
-
 <div class="basefooter">
   <p>RexBooks - For the Bookworms out there<br>
   All rights reserved RexBooks 2020</p>
@@ -259,6 +255,7 @@ a2a_config.num_services = 4;
         <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
 
+<!-- Animations -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
