Admin page added with features like del, mod, cret

--- a/request.html
+++ b/request.html
@@ -210,7 +210,7 @@ color: wheat;
   </div>
   <label><input type="text" name="title" placeholder="Book Name"/></label>
   <label><input type="text" name="letus" placeholder="Let us know..."/></label>
-  <button class="red" type="submit" value="submit" onclick="submitForm()"><i class="fas fa-cloud-download-alt"></i> Request</button>
+  <button class="red" type="submit" value="submit" onclick><i class="fas fa-cloud-download-alt"></i> Request</button>
 </form>
 
 
